Fix alignment of workbenches with status in table

--- a/frontend/src/pages/projects/notebook/ListNotebookState.scss
+++ b/frontend/src/pages/projects/notebook/ListNotebookState.scss
@@ -2,4 +2,7 @@
   display: grid;
   grid-template-columns: auto 1fr;
   gap: var(--pf-v5-global--spacer--md);
+  &__notebook {
+    justify-content: flex-end;
+  }
 }
